# protobuf_cmake_example

./: CMakeLists.txt  README.md
proto/: CMakeLists.txt  head.proto
src/: CMakeLists.txt  main.cpp
